overflow mobile fix test

--- a/app/scss/layout/_wrapper.scss
+++ b/app/scss/layout/_wrapper.scss
@@ -6,6 +6,7 @@
 	max-width: 90%;
 	// padding-block: 60px;
 	padding-inline: u.rem(10);
+	overflow-x: hidden;
 
 	// @include u.breakpoint(large) {
 	// 	padding-block: 80px;
